# simple-audio-player

./: Projucer.jucer  test.jucer
Downloads/simple-audio-player-main/: .gitignore  CMakeLists.txt
Downloads/simple-audio-player-main/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PlayerAudio.cpp  PlayerAudio.h  PlayerGUI.cpp  PlayerGUI.h
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PlayerAudio  PlayerAudio.cpp  PlayerAudio.h  PlayerGUI.cpp  PlayerGUI.h
Source/NewProject/: NewProject.jucer
